VIH-10230 Create automation test for VideoWeb dashboard (#206)
* End to End command centre journey test scenario created, page models, functions and supporting app-settings

* Uncommented code

* comment update

* Merged new vho journey, into full end-to-end test

* Reverted change to appsettings

* refactored other tests effected by truncate update

* Code review comments

* Tweaks to get the run working in saucelabs

--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -9,6 +9,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="BookingsApi.Client" Version="1.46.5" />
+        <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="Selenium.Axe" Version="4.0.13" />
         <PackageReference Include="Selenium.Support" Version="4.10.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
@@ -19,5 +21,7 @@
     <ItemGroup>
       <ProjectReference Include="..\UI.Common\UI.Common.csproj" />
     </ItemGroup>
+
+
 
 </Project>
