check if correct values are set

--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -45,7 +45,18 @@ steps:
       echo "##vso[task.setvariable variable=ApiClientConfiguration.ClientId;issecret=false]$(azuread--clientid)"
       echo "##vso[task.setvariable variable=ApiClientConfiguration.ClientSecret;issecret=false]$(azuread--clientsecret)"
       echo "##vso[task.setvariable variable=ApiClientConfiguration.BookingsApi.ResourceId;issecret=false]$(azuread--identifieruri)"
-    displayName: Change api client secrets to variables
+    displayName: Change Bookings API client secrets to variables
+
+  - task: AzureKeyVault@1
+    displayName: "Azure Key Vault: vh-video-api-${{ lower(parameters.environment) }}"
+    inputs:
+      azureSubscription: "${{ parameters.subscriptionName }}"
+      KeyVaultName: "vh-video-api-${{ lower(parameters.environment) }}"
+      SecretsFilter: "azuread--clientid, azuread--clientsecret, azuread--identifieruri"
+
+  - bash: |
+      echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApi.ResourceId;issecret=false]$(azuread--identifieruri)"
+    displayName: Change Video API client secrets to variables
 
   # inserts variables to help create unique test names
   - task: gitversion/setup@0
@@ -70,19 +81,19 @@ steps:
       Get-Content "${{ parameters.projectpath }}/appsettings.json"
     displayName: Print App Settings
 
-  - bash: |
-      sed -i "s|</configuration>|<packageSourceCredentials><vh-packages><add key=\"Username\" value=\"PAT\" /><add key=\"ClearTextPassword\" value=\"$(System.AccessToken)\" /></vh-packages></packageSourceCredentials></configuration>|" nuget.config
-    displayName: Add NuGet Feed Authentication
-    workingDirectory: $(Build.SourcesDirectory)
+  # - bash: |
+  #     sed -i "s|</configuration>|<packageSourceCredentials><vh-packages><add key=\"Username\" value=\"PAT\" /><add key=\"ClearTextPassword\" value=\"$(System.AccessToken)\" /></vh-packages></packageSourceCredentials></configuration>|" nuget.config
+  #   displayName: Add NuGet Feed Authentication
+  #   workingDirectory: $(Build.SourcesDirectory)
 
-  - task: DotNetCoreCLI@2
-    displayName: Run UI Tests
-    inputs:
-      command: test
-      projects: "${{ parameters.projectpath }}/*.csproj"
-      publishTestResults: true
-      testRunTitle: "${{ parameters.testRunTitle }}"
-      ${{ if eq(parameters.testCategory, '') }}:
-        arguments: "--configuration Release"
-      ${{ else }}:
-        arguments: "--configuration Release --filter TestCategory=${{ parameters.testCategory }}"
+  # - task: DotNetCoreCLI@2
+  #   displayName: Run UI Tests
+  #   inputs:
+  #     command: test
+  #     projects: "${{ parameters.projectpath }}/*.csproj"
+  #     publishTestResults: true
+  #     testRunTitle: "${{ parameters.testRunTitle }}"
+  #     ${{ if eq(parameters.testCategory, '') }}:
+  #       arguments: "--configuration Release"
+  #     ${{ else }}:
+  #       arguments: "--configuration Release --filter TestCategory=${{ parameters.testCategory }}"
