--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -56,7 +56,7 @@ steps:
 
   - bash: |
       echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApi.ResourceId;issecret=false]$(azuread--identifieruri)"]
-      echo $(ApiClientConfiguration.VideoApi.ResourceId)
+      echo "$(ApiClientConfiguration.VideoApi.ResourceId)"
     displayName: Change Video API client secrets to variables
 
   # inserts variables to help create unique test names
