--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -55,7 +55,7 @@ steps:
       SecretsFilter: "azuread--identifieruri"
 
   - bash: |
-      echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApi.ResourceId;issecret=false]$(azuread--identifieruri)"]
+      echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApi.ResourceId;issecret=false]$(azuread--identifieruri)"
       echo "$(ApiClientConfiguration.VideoApi.ResourceId)"
     displayName: Change Video API client secrets to variables
 
