make test config a flat structure

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -51,9 +51,9 @@ stages:
               - group: vh-automation-test-${{ parameters.environment }}
               - group: Saucelabs
               - group: KinlyConfiguration_${{ parameters.environment }}
-              - name: ApiClientConfiguration.BookingsApi.Url
+              - name: ApiClientConfiguration.BookingsApiUrl
                 value: ${{ variables.bookingsApiUrl }}
-              - name: ApiClientConfiguration.VideoApi.Url
+              - name: ApiClientConfiguration.VideoApiUrl
                 value: ${{ variables.videoApiUrl }}
               - name: TestDataConfiguration.AudioLinkCaseNumber
                 value: ${{ variables.audioLinkCaseNumber }}
@@ -86,9 +86,9 @@ stages:
                 value: $(Build.ArtifactStagingDirectory)/axe-results.json
               - name: SystemConfiguration.EnvironmentConfigSettings.AccessibilityHtmlReportFilePath
                 value: $(Build.ArtifactStagingDirectory)/axe-results.html
-              - name: ApiClientConfiguration.BookingsApi.Url
+              - name: ApiClientConfiguration.BookingsApiUrl
                 value: ${{ variables.bookingsApiUrl }}
-              - name: ApiClientConfiguration.VideoApi.Url
+              - name: ApiClientConfiguration.VideoApiUrl
                 value: ${{ variables.videoApiUrl }}
 
             steps:
