--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -44,7 +44,7 @@ steps:
       echo "##vso[task.setvariable variable=ApiClientConfiguration.TenantId;issecret=false]$(azuread--tenantid)"
       echo "##vso[task.setvariable variable=ApiClientConfiguration.ClientId;issecret=false]$(azuread--clientid)"
       echo "##vso[task.setvariable variable=ApiClientConfiguration.ClientSecret;issecret=false]$(azuread--clientsecret)"
-      echo "##vso[task.setvariable variable=ApiClientConfiguration.BookingsApi.ResourceId;issecret=false]$(azuread--identifieruri)"
+      echo "##vso[task.setvariable variable=ApiClientConfiguration.BookingsApiResourceId;issecret=false]$(azuread--identifieruri)"
     displayName: Change Bookings API client secrets to variables
 
   - task: AzureKeyVault@1
@@ -55,7 +55,7 @@ steps:
       SecretsFilter: "azuread--identifieruri"
 
   - bash: |
-      echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApi.ResourceId;issecret=false]$(azuread--identifieruri)"
+      echo "##vso[task.setvariable variable=ApiClientConfiguration.VideoApiResourceId;issecret=false]$(azuread--identifieruri)"
       echo "$(ApiClientConfiguration.VideoApi.ResourceId)"
     displayName: Change Video API client secrets to variables
 
