--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -76,6 +76,10 @@
     "ClientId": "ClientId",
     "ClientSecret": "ClientSecret",
     "TenantId": "TenantId",
+    "BookingsApiUrl": "https://localhost:5300/",
+    "BookingsApiResourceId": "ResourceId",
+    "VideoApiUrl": "https://localhost:5300/",
+    "VideoApiResourceId": "ResourceId",
     "BookingsApi": {
       "Url": "https://localhost:5300/",      
       "ResourceId": "ResourceId"
