--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -79,15 +79,7 @@
     "BookingsApiUrl": "https://localhost:5300/",
     "BookingsApiResourceId": "ResourceId",
     "VideoApiUrl": "https://localhost:5300/",
-    "VideoApiResourceId": "ResourceId",
-    "BookingsApi": {
-      "Url": "https://localhost:5300/",      
-      "ResourceId": "ResourceId"
-    },
-    "VideosApi": {
-      "Url": "https://localhost:59390/",
-      "ResourceId": "ResourceId"
-    }
+    "VideoApiResourceId": "ResourceId"
   },
   "TestDataConfiguration": {
     "AudioLinkCaseNumber": "VIH 9831"
