--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -82,19 +82,19 @@ steps:
       Get-Content "${{ parameters.projectpath }}/appsettings.json"
     displayName: Print App Settings
 
-  # - bash: |
-  #     sed -i "s|</configuration>|<packageSourceCredentials><vh-packages><add key=\"Username\" value=\"PAT\" /><add key=\"ClearTextPassword\" value=\"$(System.AccessToken)\" /></vh-packages></packageSourceCredentials></configuration>|" nuget.config
-  #   displayName: Add NuGet Feed Authentication
-  #   workingDirectory: $(Build.SourcesDirectory)
+  - bash: |
+      sed -i "s|</configuration>|<packageSourceCredentials><vh-packages><add key=\"Username\" value=\"PAT\" /><add key=\"ClearTextPassword\" value=\"$(System.AccessToken)\" /></vh-packages></packageSourceCredentials></configuration>|" nuget.config
+    displayName: Add NuGet Feed Authentication
+    workingDirectory: $(Build.SourcesDirectory)
 
-  # - task: DotNetCoreCLI@2
-  #   displayName: Run UI Tests
-  #   inputs:
-  #     command: test
-  #     projects: "${{ parameters.projectpath }}/*.csproj"
-  #     publishTestResults: true
-  #     testRunTitle: "${{ parameters.testRunTitle }}"
-  #     ${{ if eq(parameters.testCategory, '') }}:
-  #       arguments: "--configuration Release"
-  #     ${{ else }}:
-  #       arguments: "--configuration Release --filter TestCategory=${{ parameters.testCategory }}"
+  - task: DotNetCoreCLI@2
+    displayName: Run UI Tests
+    inputs:
+      command: test
+      projects: "${{ parameters.projectpath }}/*.csproj"
+      publishTestResults: true
+      testRunTitle: "${{ parameters.testRunTitle }}"
+      ${{ if eq(parameters.testCategory, '') }}:
+        arguments: "--configuration Release"
+      ${{ else }}:
+        arguments: "--configuration Release --filter TestCategory=${{ parameters.testCategory }}"
