--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -76,14 +76,10 @@
     "ClientId": "ClientId",
     "ClientSecret": "ClientSecret",
     "TenantId": "TenantId",
-    "BookingsApi": {
-      "Url": "https://localhost:5300/",      
-      "ResourceId": "ResourceId"
-    },
-    "VideosApi": {
-      "Url": "https://localhost:59390/",
-      "ResourceId": "ResourceId"
-    }
+    "BookingsApiUrl": "https://localhost:5300/",
+    "BookingsApiResourceId": "ResourceId",
+    "VideoApiUrl": "https://localhost:5300/",
+    "VideoApiResourceId": "ResourceId"
   },
   "TestDataConfiguration": {
     "AudioLinkCaseNumber": "VIH 9831"
