--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -3,7 +3,7 @@ trigger: none
 pr: none
 
 schedules:
-  - cron: "15 8 * * *"
+  - cron: "15 9 * * *"
     displayName: Daily build
     always: true
     branches:
@@ -51,8 +51,10 @@ stages:
               - group: vh-automation-test-${{ parameters.environment }}
               - group: Saucelabs
               - group: KinlyConfiguration_${{ parameters.environment }}
-              - name: ApiClientConfiguration.BookingsApi.Url
+              - name: ApiClientConfiguration.BookingsApiUrl
                 value: ${{ variables.bookingsApiUrl }}
+              - name: ApiClientConfiguration.VideoApiUrl
+                value: ${{ variables.videoApiUrl }}
               - name: TestDataConfiguration.AudioLinkCaseNumber
                 value: ${{ variables.audioLinkCaseNumber }}
 
@@ -84,9 +86,9 @@ stages:
                 value: $(Build.ArtifactStagingDirectory)/axe-results.json
               - name: SystemConfiguration.EnvironmentConfigSettings.AccessibilityHtmlReportFilePath
                 value: $(Build.ArtifactStagingDirectory)/axe-results.html
-              - name: ApiClientConfiguration.BookingsApi.Url
+              - name: ApiClientConfiguration.BookingsApiUrl
                 value: ${{ variables.bookingsApiUrl }}
-              - name: ApiClientConfiguration.VideoApi.Url
+              - name: ApiClientConfiguration.VideoApiUrl
                 value: ${{ variables.videoApiUrl }}
 
             steps:
