--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -76,17 +76,21 @@ stages:
               
               - powershell: |
                   #get the path of the trx file from the output folder.
-                  $path = Get-ChildItem -Path $(Agent.TempDirectory)\TestResults -Recurse -ErrorAction SilentlyContinue -Filter *.trx |  Where-Object { $_.Extension -eq '.trx' }
+                  $file = Get-ChildItem -Path $(Agent.TempDirectory)\UI_Report -Recurse  -Filter *.trx 
 
-                  $appConfigFile = $path.FullName  #path to test result trx file 
+                  [xml]$data = Get-Content $file.FullName
 
-                  $appConfig = New-Object XML 
-                  $appConfig.Load($appConfigFile) 
-                  $testsummary = $appConfig.DocumentElement.ResultSummary.Counters | select total, passed, failed, aborted
+                  $outcome = $data.TestRun.ResultSummary.outcome
+                  $executed = $data.TestRun.ResultSummary.Counters.executed
+                  $passed = $data.TestRun.ResultSummary.Counters.passed
+                  $aborted = $data.TestRun.ResultSummary.Counters.aborted
+                  $failed = $data.TestRun.ResultSummary.Counters.failed
 
-                  echo $testsummary   # check testsummary
+                  $res = "$outcome [ 👀 $executed | ✔ $passed | ❌ $failed | 😭 $aborted ]"
 
-                  echo "##vso[task.setvariable variable=testSummary]$($testsummary)" #set the testsummary to environment variable
+                  Write-Output $res
+
+                  echo "##vso[task.setvariable variable=testSummaryUI]$($res)" #set the testsummary to environment variable
                 displayName: Get results
                 condition: always()
 
