--- a/pipelines/templates/get-results-from-trx.yaml
+++ b/pipelines/templates/get-results-from-trx.yaml
@@ -1,3 +1,7 @@
+parameters:
+  - name: name
+    type: string
+
 steps:
   powershell: |
     #get the path of the trx file from the output folder.
@@ -16,5 +20,6 @@ steps:
     Write-Output $res
 
     echo "##vso[task.setvariable variable=testSummaryUI]$($res)" #set the testsummary to environment variable
-  displayName: Get results from trx
+  displayName: "Get results from ${{parameter.name}} trx"
+  name: TRX_${{parameter.name}}
   condition: always()
