--- a/pipelines/templates/get-results-from-trx.yaml
+++ b/pipelines/templates/get-results-from-trx.yaml
@@ -21,5 +21,5 @@ steps:
 
       echo "##vso[task.setvariable variable=testSummaryUI]$($res)" #set the testsummary to environment variable
     displayName: "Get results from ${{parameter.name}} trx"
-    name: TRX_${{parameter.name}}
+    name: TRX_${{parameters.name}}
     condition: always()
