--- a/pipelines/templates/send-results-to-slack.yaml
+++ b/pipelines/templates/send-results-to-slack.yaml
@@ -8,6 +8,7 @@ steps:
   - powershell: |
       $params = @{
                 "results"="${{ parameters.results }}";
+                "link"="${Build.BuildUri)";
                 }
       $triggerID = "${{ parameters.triggerID }}"
       $uri = "https://hooks.slack.com/triggers/$triggerID"
