--- a/pipelines/templates/get-results-from-trx.yaml
+++ b/pipelines/templates/get-results-from-trx.yaml
@@ -15,11 +15,12 @@ steps:
       $aborted = $data.TestRun.ResultSummary.Counters.aborted
       $failed = $data.TestRun.ResultSummary.Counters.failed
 
-      $res = "$outcome [ TESTED: $executed | PASSED: $passed | FAILED: $failed | ABORTED: $aborted ]"
+      $details = "[ TESTED: $executed | PASSED: $passed | FAILED: $failed | ABORTED: $aborted ]"
 
       Write-Output $res
 
-      echo "##vso[task.setvariable variable=testSummary]$($res)" #set the testsummary to environment variable
+      echo "##vso[task.setvariable variable=testSummary]$($details)" 
+      echo "##vso[task.setvariable variable=testOutcome]$($outcome)" 
     displayName: "Get results from ${{parameters.name}} trx"
     name: TRX_${{parameters.name}}
     condition: always()
