--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -81,7 +81,9 @@ stages:
 
               - template: pipelines/templates/send-results-to-slack.yaml
                 parameters:
-                  results: $(testSummary)
+                  env: ${{ parameters.environment }}
+                  results: $(testOutcome)
+                  details: $(testSummary)
                   triggerID: $(triggerID)
                   type: UI Tests
 
