--- a/UI.NUnitVersion/UI.NUnitVersion.csproj
+++ b/UI.NUnitVersion/UI.NUnitVersion.csproj
@@ -11,6 +11,7 @@
         <PackageReference Include="BookingsApi.Client" Version="1.46.5" />
         <PackageReference Include="ExtentReports" Version="4.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.11.0" />
+        <PackageReference Include="LaunchDarkly.ServerSdk" Version="8.0.0" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.2" />
         <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
