--- a/azure-pipelines.sds.regression.yml
+++ b/azure-pipelines.sds.regression.yml
@@ -31,6 +31,7 @@ stages:
               environment: ${{ parameters.environment }}
           - group: vh-automation-test-${{ parameters.environment }}
           - group: Saucelabs
+          - group: FeatureFlags_${{ parameters.environment }}
           - group: KinlyConfiguration_${{ parameters.environment }}
           - name: ApiClientConfiguration.BookingsApiUrl
             value: ${{ variables.bookingsApiUrl }}
