--- a/variables/shared.yaml
+++ b/variables/shared.yaml
@@ -23,7 +23,7 @@ variables:
   - name: SystemConfiguration.EnvironmentConfigSettings.VideoUrl
     value: ${{ variables.videoWebUrl }}
   - name: SystemConfiguration.EnvironmentConfigSettings.LaunchDarklyKey
-    value: ${{ FeatureFlags_${{ environment }}.SDK-Key }}
+    value: ${{ FeatureFlags_${{ parameters.environment }}.SDK-Key }}
 
   - name: SystemConfiguration.LogLocation
     value: $(Build.ArtifactStagingDirectory)/TestResults/Logs
