added key to app settings

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -57,6 +57,7 @@
       "EnableAccessibilityCheck": false,
       "AccessibilityReportFilePath": "vh-axe-result.json",
       "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
+      "LaunchDarklyKey": "",
       "SauceLabsConfiguration": {
         "SauceUsername": "",
         "SauceAccessKey": "",
