--- a/pipelines/templates/run-ui-test.yaml
+++ b/pipelines/templates/run-ui-test.yaml
@@ -45,7 +45,7 @@ steps:
       echo "##vso[task.setvariable variable=ApiClientConfiguration.ClientId;issecret=false]$(azuread--clientid)"
       echo "##vso[task.setvariable variable=ApiClientConfiguration.ClientSecret;issecret=false]$(azuread--clientsecret)"
       echo "##vso[task.setvariable variable=ApiClientConfiguration.BookingsApiResourceId;issecret=false]$(azuread--identifieruri)"
-      echo "##vso[task.setvariable variable=EnvironmentConfigSettings.LaunchDarklyKey;issecret=true]$(launchdarkly--sdkkey)"
+      echo "##vso[task.setvariable variable=EnvironmentConfigSettings.LaunchDarklyKey;issecret=false]$(launchdarkly--sdkkey)"
     displayName: Change Bookings API client secrets to variables
 
   - task: AzureKeyVault@1
