--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -38,6 +38,7 @@
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
     "EnvironmentConfigSettings": {
+      "LaunchDarklyKey": "",
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
