added default value

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -38,7 +38,7 @@
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
     "EnvironmentConfigSettings": {
-      "LaunchDarklyKey": "",
+      "LaunchDarklyKey": "launchdarklykey",
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
