VIH-10310 api booking hearing v2 (#211)
* AdminBookingV2test

BookingV2test

* Update of API booking test data, vhpage summary page

* Update Use Party option

* Update additional judge

* Updating Judge with option to book both V1 and V2

* Refactored code and tests so that both v1 and v2 book a hearing tests work, determinate on feature flag status

* added thread sleep

* updated yaml to pull down feature flag sdk key

* updated shared.yaml

* updated shared.yaml

* Revert "updated shared.yaml"

This reverts commit 35b8b6dc305a53c939b4050d7d2f0cf6c62e0538.

* hardcoded env

* hardcoded env

* differnt name

* removed from shared

* added key to app settings

* added key to app settings

* updated additional appsettings.json

* added default value

* moved key to api client config

* refactored V1 and V2 tests into a single test

---------

Co-authored-by: William Craig <mr.craig1991@gmail.com>

--- a/UI/Selenium/appsettings.json
+++ b/UI/Selenium/appsettings.json
@@ -38,6 +38,7 @@
     "LogSuffix": "EndToEndTest",
     "LogLocation": "../../../TestResults/Logs",
     "EnvironmentConfigSettings": {
+      "LaunchDarklyKey": "",
       "Environment": "Development",
       "BrowserType": "Chrome",
       "ConnectionString": "",
@@ -46,7 +47,7 @@
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
-      "DefaultElementWait": "20",
+      "DefaultElementWait": "60",
       "PipelineElementWait": 30,
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": "60",
