--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -46,7 +46,7 @@
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
-      "DefaultElementWait": "20",
+      "DefaultElementWait": "60",
       "PipelineElementWait": 30,
       "SaucelabsElementWait": 40,
       "OneMinuteElementWait": "60",
@@ -72,6 +72,7 @@
     }
   },
   "ApiClientConfiguration": {
+    "LaunchDarklyKey": "launchdarklykey",
     "Authority": "https://login.microsoftonline.com/",
     "ClientId": "ClientId",
     "ClientSecret": "ClientSecret",
