--- a/UI.PageModels/UI.PageModels.csproj
+++ b/UI.PageModels/UI.PageModels.csproj
@@ -11,6 +11,7 @@
     <ItemGroup>
         <PackageReference Include="BookingsApi.Client" Version="1.46.5" />
         <PackageReference Include="FluentAssertions" Version="6.11.0" />
+        <PackageReference Include="NUnit" Version="3.13.3" />
         <PackageReference Include="Selenium.Axe" Version="4.0.13" />
         <PackageReference Include="Selenium.Support" Version="4.10.0" />
         <PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
