--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -3,7 +3,7 @@ trigger: none
 pr: none
 
 schedules:
-  - cron: "15 9 * * *"
+  - cron: "15 9 * * 1,2,3,4,5"
     displayName: Daily build
     always: true
     branches:
