VIH-10425 Tweaks to help with test stability with the loading spinner (#216)
* Teaks to help with test stability, and updated daily.yml and turned a11y category off for now (as there is nothing to run but repeat the end-to-end which is already in the daily)

* time the schedule runs

* Refined teardown clear up of hearings, to be called from OneTimeTearDown in CommonUiTest.cs (this will be called even if error it thrown, meaning less residual tests left over)

* teaks to wait on spinner

--- a/azure-pipelines.sds.daily.yml
+++ b/azure-pipelines.sds.daily.yml
@@ -1,5 +1,4 @@
 trigger: none
-
 pr: none
 
 schedules:
@@ -19,7 +18,7 @@ parameters:
   - name: runA11yTests
     displayName: Run Accessibiliy Tests
     type: boolean
-    default: true
+    default: false
 
   - name: environment
     type: string
