Refactored and simplified everything around  adding participants aswell as nuances between v1 and v2 toggled logic. Have also set date for daily's to run at midday, to see how SauceLabs handles it

--- a/UI.NUnitVersion/appsettings.json
+++ b/UI.NUnitVersion/appsettings.json
@@ -46,14 +46,14 @@
       "UserPassword": "",
       "UKConferencePhoneNumber": "",
       "SoapApiUrl": "",
-      "DefaultElementWait": "60",
+      "DefaultElementWait": 60,
       "PipelineElementWait": 30,
       "SaucelabsElementWait": 40,
-      "OneMinuteElementWait": "60",
+      "OneMinuteElementWait": 60,
       "TestResultsDirectory": "default",
       "ReportLocation": "/TestResults/Reports",
       "ImageLocation": "/TestResults/Images",
-      "RunOnSauceLabs": true,
+      "RunOnSauceLabs": false,
       "EnableAccessibilityCheck": false,
       "AccessibilityReportFilePath": "vh-axe-result.json",
       "AccessibilityHtmlReportFilePath": "vh-axe-result.html",
@@ -77,10 +77,10 @@
     "ClientId": "ClientId",
     "ClientSecret": "ClientSecret",
     "TenantId": "TenantId",
-    "BookingsApiUrl": "https://localhost:5300/",
-    "BookingsApiResourceId": "ResourceId",
-    "VideoApiUrl": "https://localhost:5300/",
-    "VideoApiResourceId": "ResourceId"
+    "BookingsApiUrl": "https://vh-bookings-api.dev.platform.hmcts.net/",
+    "BookingsApiResourceId": "https://vh-bookings-api.dev.platform.hmcts.net",
+    "VideoApiUrl": "https://vh-video-api.dev.platform.hmcts.net/",
+    "VideoApiResourceId": "https://vh-video-api.dev.platform.hmcts.net"
   },
   "TestDataConfiguration": {
     "AudioLinkCaseNumber": "VIH 9831"
