--- a/variables/dev.yaml
+++ b/variables/dev.yaml
@@ -2,7 +2,7 @@ variables:
   - name: env
     value: "dev"
   - name: adminWebUrl
-    value: "https://vh-admin-web.dev.platform.hmcts.net/reform-login"
+    value: "https://vh-admin-web.dev.platform.hmcts.net"
   - name: videoWebUrl
     value: "https://vh-video-web.dev.platform.hmcts.net"
   - name: bookingsApiUrl
