--- a/UI.AutomationTests/UI.AutomationTests.csproj
+++ b/UI.AutomationTests/UI.AutomationTests.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="BookingsApi.Client" Version="1.46.5" />
+        <PackageReference Include="BookingsApi.Client" Version="1.51.11-pr-0825-0004" />
         <PackageReference Include="ExtentReports" Version="4.1.0" />
         <PackageReference Include="FluentAssertions" Version="6.11.0" />
         <PackageReference Include="LaunchDarkly.ServerSdk" Version="8.0.0" />
@@ -23,6 +23,7 @@
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="UserApi.Client" Version="1.48.1" />
         <PackageReference Include="VideoApi.Client" Version="1.48.4" />
         <PackageReference Include="WebDriverManager" Version="2.17.1" />
     </ItemGroup>
